fix(android): support minSdk provider IO